src/objects/CH_Workgroup_Event__c.object
<CustomObject>
    <description>Events that are scheduled for the workgroup. An event says who will work as what and when</description>
    <fields>
        <fullName>CH_Days__c</fullName>
        <label>Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_EndDate__c</fullName>
        <description>The end datetime for the event</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The end datetime for the event</inlineHelpText>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_EndOccurence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Occurence</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_Recoccurence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reoccurence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_StartDate__c</fullName>
        <description>The start datetime of the event</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The start datetime of the event</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CH_Subject__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_SupportType__c</fullName>
        <label>Support Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Call Primary</fullName>
                </value>
                <value>
                    <fullName>On Call Backup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>CET</fullName>
                </value>
                <value>
                    <fullName>GMT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_WorkgroupMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workgroup Member</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>CH_Workgroup_Member__c.CH_Workgroup__c</field>
                <operation>equals</operation>
                <valueField>$Source.CH_Workgroup__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.CH_Workgroup__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>CH_Workgroup_Member__c.CH_Workgroup__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CH_Workgroup_Member__c</referenceTo>
        <relationshipLabel>Workgroup Rotas</relationshipLabel>
        <relationshipName>Workgroup_Rotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup_Member_Name__c</fullName>
        <formula>CH_WorkgroupMember__r.CH_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workgroup Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <label>Workgroup</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Workgroup Rotas</relationshipLabel>
        <relationshipName>Workgroup_Rotas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CH_Worktype__c</fullName>
        <label>Worktype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Workgroup Rota</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CH_Workgroup__c</columns>
        <columns>CH_WorkgroupMember__c</columns>
        <columns>CH_SupportType__c</columns>
        <columns>CH_Days__c</columns>
        <columns>CH_StartDate__c</columns>
        <columns>CH_EndDate__c</columns>
        <columns>CH_EndOccurence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Rota</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup Rotas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>